Fixed horizontal scroll on page "Showcases"

--- a/src/theme/Banner/styles.module.css
+++ b/src/theme/Banner/styles.module.css
@@ -6,6 +6,8 @@
 
 .Row, .Col{
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .Content {
